[package]
edition = "2021"
name = "torsen"
version = "0.1.0"

[[bin]]
name = "torsen-server"
path = "src/server/server.rs"

[[bin]]
name = "torsen-client"
path = "src/client/client.rs"

[dependencies]
prost = "0.11"
rustls-pemfile = "1.0"
tokio = {version = "1.22", features = ["rt-multi-thread"]}
tokio-rustls = "0.23"
tokio-stream = "0.1"
tonic = {version = "0.8", features = ["gzip"]}

[build-dependencies]
tonic-build = "0.8"
